force-app/main/default/objects/AVO_SharePoint_File__c/AVO_SharePoint_File__c.object-meta.xml
<CustomObject>
    <label>SharePoint File</label>
    <nameField>
        <label>SharePoint File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SharePoint Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>