force-app/main/default/objects/AVO_SharePoint_File__c/fields/AVO_Comment__c.field-meta.xml
<CustomField>
    <fullName>AVO_Comment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comment</label>
    <referenceTo>MUSW__Comment__c</referenceTo>
    <relationshipLabel>SharePoint Files</relationshipLabel>
    <relationshipName>SharePoint_Files</relationshipName>
    <type>Lookup</type>
</CustomField>