force-app/main/default/objects/AVO_SharePoint_File__c/fields/AVO_Complaint__c.field-meta.xml
<CustomField>
    <fullName>AVO_Complaint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complaint</label>
    <referenceTo>MUSW__Complaint2__c</referenceTo>
    <relationshipLabel>SharePoint Files</relationshipLabel>
    <relationshipName>SharePoint_Files</relationshipName>
    <type>Lookup</type>
</CustomField>