force-app/main/default/objects/AVO_SharePoint_File__c/fields/AVO_Compliance__c.field-meta.xml
<CustomField>
    <fullName>AVO_Compliance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance</label>
    <referenceTo>AVO_Compliance__c</referenceTo>
    <relationshipLabel>SharePoint Files</relationshipLabel>
    <relationshipName>SharePoint_Files</relationshipName>
    <type>Lookup</type>
</CustomField>