force-app/main/default/objects/AVO_SharePoint_File__c/fields/AVO_Contact__c.field-meta.xml
<CustomField>
    <fullName>AVO_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SharePoint Files</relationshipLabel>
    <relationshipName>SharePoint_Files</relationshipName>
    <type>Lookup</type>
</CustomField>