force-app/main/default/objects/AVO_SharePoint_File__c/fields/AVO_ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>AVO_ContentDocumentId__c</fullName>
    <label>contentDocumentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>