force-app/main/default/objects/AVO_SharePoint_File__c/fields/AVO_Inspection__c.field-meta.xml
<CustomField>
    <fullName>AVO_Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection</label>
    <referenceTo>MUSW__Inspection__c</referenceTo>
    <relationshipLabel>SharePoint Files</relationshipLabel>
    <relationshipName>SharePoint_Files</relationshipName>
    <type>Lookup</type>
</CustomField>