force-app/main/default/objects/AVO_SharePoint_File__c/fields/AVO_Meter_Codeset__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Codeset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meter Codeset</label>
    <referenceTo>AVO_Meter_Codeset__c</referenceTo>
    <relationshipLabel>SharePoint Files</relationshipLabel>
    <relationshipName>SharePoint_Files</relationshipName>
    <type>Lookup</type>
</CustomField>