force-app/main/default/objects/AVO_SharePoint_File__c/fields/AVO_Permit__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permit</label>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>SharePoint Files</relationshipLabel>
    <relationshipName>SharePoint_Files</relationshipName>
    <type>Lookup</type>
</CustomField>