force-app/main/default/objects/AVO_SharePoint_File__c/fields/AVO_Review__c.field-meta.xml
<CustomField>
    <fullName>AVO_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review</label>
    <referenceTo>MUSW__Review__c</referenceTo>
    <relationshipLabel>SharePoint Files</relationshipLabel>
    <relationshipName>SharePoint_Files</relationshipName>
    <type>Lookup</type>
</CustomField>