force-app/main/default/objects/AVO_SharePoint_File__c/fields/AVO_SharePoint_External_Link__c.field-meta.xml
<CustomField>
    <fullName>AVO_SharePoint_External_Link__c</fullName>
    <label>SharePoint External Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>