force-app/main/default/objects/AVO_SharePoint_File__c/fields/AVO_SharePoint_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>AVO_SharePoint_Item_Id__c</fullName>
    <label>SharePoint Item Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>