force-app/main/default/objects/AVO_SharePoint_File__c/fields/AVO_SharePoint_URL__c.field-meta.xml
<CustomField>
    <fullName>AVO_SharePoint_URL__c</fullName>
    <label>SharePoint URL</label>
    <type>Url</type>
</CustomField>