force-app/main/default/objects/AVO_SharePoint_File__c/fields/AVO_SharePoint_URL_Text__c.field-meta.xml
<CustomField>
    <fullName>AVO_SharePoint_URL_Text__c</fullName>
    <label>SharePoint URL Text</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>