force-app/main/default/objects/AVO_SharePoint_File__c/fields/AVO_Submission__c.field-meta.xml
<CustomField>
    <fullName>AVO_Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submission</label>
    <referenceTo>MUSW__Submission__c</referenceTo>
    <relationshipLabel>SharePoint Files</relationshipLabel>
    <relationshipName>SharePoint_Files</relationshipName>
    <type>Lookup</type>
</CustomField>