force-app/main/default/objects/AVO_SharePoint_File__c/fields/AVO_Violation__c.field-meta.xml
<CustomField>
    <fullName>AVO_Violation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Violation</label>
    <referenceTo>MUSW__Violation__c</referenceTo>
    <relationshipLabel>SharePoint Files</relationshipLabel>
    <relationshipName>SharePoint_Files</relationshipName>
    <type>Lookup</type>
</CustomField>