force-app/main/default/objects/AVO_SharePoint_File__c/fields/AVO_Withdrawal__c.field-meta.xml
<CustomField>
    <fullName>AVO_Withdrawal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Withdrawals</label>
    <referenceTo>AVO_Withdrawals__c</referenceTo>
    <relationshipLabel>SharePoint Files</relationshipLabel>
    <relationshipName>SharePoint_Files</relationshipName>
    <type>Lookup</type>
</CustomField>