force-app/main/default/objects/AVO_SharePoint_File__c/validationRules/Prevent_All_Edits.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_All_Edits</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
    ISCHANGED(AVO_Account__c),
    ISCHANGED(AVO_Application__c),
    ISCHANGED(AVO_Comment__c),
    ISCHANGED(AVO_Complaint__c),
    ISCHANGED(AVO_Contact__c),
    ISCHANGED(AVO_ContentDocumentId__c),
    ISCHANGED(CreatedById),
    ISCHANGED(AVO_Inspection__c),
    ISCHANGED(LastModifiedById),
    ISCHANGED(AVO_License__c),
    ISCHANGED(AVO_Milestone__c),
    ISCHANGED(OwnerId),
    ISCHANGED(AVO_Permit__c),
    ISCHANGED(AVO_Review__c),
    ISCHANGED(AVO_SharePoint_External_Link__c),
    ISCHANGED(Name),
    ISCHANGED(AVO_SharePoint_Item_Id__c),
    ISCHANGED(AVO_SharePoint_URL__c),
    ISCHANGED(AVO_SharePoint_URL_Text__c),
    ISCHANGED(AVO_Submission__c),
    ISCHANGED(AVO_Violation__c)
)</errorConditionFormula>
    <errorMessage>Error: Unauthorized Field Modification - Editing any fields on this record is not allowed. Please contact your administrator if you need to make changes.</errorMessage>
</ValidationRule>